endlessdir=$(datadir)/yelp/endless

css_files = \
	css/article-style.css \
	css/bootstrap.css.map \
	css/bootstrap.min.css \
	css/eos-help-center-style.css \
	css/fonts.css \
	css/font-awesome.min.css \
	css/utilities.css \
	$(NULL)

img_files = \
	img/arrow-back.png \
	img/border_bg_dark.png \
	img/li_circle.png \
	img/module_circle_bg_blur.png \
	img/video.png \
	img/arrow-right_dark.png \
	img/border_bg.png \
	img/module_circle_bg.png \
	img/arrow-right.png \
	img/border_bg_reverse.png \
	img/play.png \
	img/arrow-right_section.png \
	img/border_bg_sub.png \
	img/arrow-right-small.png \
	img/icon_info.png \
	img/icon_home.png \
	img/separator.png \
	$(NULL)

font_files = \
	fonts/fontawesome-webfont.svg \
	fonts/glyphicons-halflings-regular.eot \
	fonts/glyphicons-halflings-regular.woff \
	fonts/FontAwesome.otf \
	fonts/fontawesome-webfont.ttf \
	fonts/glyphicons-halflings-regular.svg \
	fonts/fontawesome-webfont.eot \
	fonts/fontawesome-webfont.woff \
	fonts/glyphicons-halflings-regular.ttf \
	$(NULL)

nobase_endless_DATA = $(css_files) $(img_files) $(font_files)

EXTRA_DIST = $(nobase_endless_DATA)
