endlessdir=$(datadir)/yelp/endless

css_files = \
	css/article.css \
	css/sidebar.css \
	$(NULL)

img_files = \
	img/arrow-back.png \
	img/border_bg_dark.png \
	img/li_circle.png \
	img/module_circle_bg_blur.png \
	img/video.png \
	img/arrow-right_dark.png \
	img/border_bg.png \
	img/module_circle_bg.png \
	img/arrow-right.png \
	img/border_bg_reverse.png \
	img/play.png \
	img/arrow-right_section.png \
	img/border_bg_sub.png \
	img/arrow-right-small.png \
	img/icon_info.png \
	img/icon_home.png \
	img/separator.png \
	$(NULL)

spec_files = \
	spec/index.page \
	spec/mallard-logo.png \
	spec/movie.ogv \
	spec/page1.page \
	spec/page2.page \
	spec/page3.page \
	spec/raptor.jpg \
	$(NULL)

nobase_endless_DATA = $(css_files) $(img_files) $(font_files) $(spec_files)

EXTRA_DIST = $(nobase_endless_DATA)
